gh pages agregado

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ray-de-lara.github.io/IDP/ ",
+  "homepage": "https://ray-de-lara.github.io/idp/ ",
   "name": "idp",
   "version": "0.1.0",
   "private": true,
